iRedMail-0.9.5-1:
    * Fixed issues:
        - Postfix:
            - Cannot deliver email to system account.
        - OpenLDAP:
            - Incorrect default password scheme if module 'pw-sha2' is not
              available.
        - PHP
            - Allow functions: 'popen', 'openlog'. Required by Roundcube.
        - Incorrect compress command used in logrotate config files.
        - Add missing package 'mcrypt' on RHEL/CentOS 6.

    * Updated packages:
        + iRedAPD -> 1.9.1

iRedMail-0.9.5:
    * Supports new distribution release:
        + Ubuntu 16.04 LTS (code name: xenial).
        + OpenBSD 5.9.

    * Drop support for old distribution releases:
        - Ubuntu 15.10 (code name: wily).
        - OpenBSD 5.8.
        - Debian 7 (code name: Wheezy). Please use Debian 8 instead.

          Debian team stops offering security updates for Debian 7 after
          April 25, 2016. Reference: https://wiki.debian.org/DebianOldStable

    * Improvements:
        - Postfix:
            + Supports Postfix parameter `sender_dependent_relayhost_maps`.
            + SMTP SASL AUTH is disabled on port 25. Please use port 587 instead.
        - Amavisd:
            + Add custom Amavisd log template (at log level 0) to always log
              SpamAssassin testing result.
        - OpenLDAP:
            + Switch OpenLDAP backend to mdb (Memory-Mapped DB backend to slapd)
              on Linux and FreeBSD (not available on OpenBSD yet).
            + Enable OpenLDAP overlay 'pw-sha2' to support password verification
              with sha2 algorithms.
        - SOGo:
            + SOGo is configured to store password in SSHA512 (instead of ssha)
              hash by default.
            + Switch SOGo to 3.x from 2.x on Linux/FreeBSD (OpenBSD offers v2).
            + Able to enable/disable sogo service for a single user with new SQL
              column `mailbox.enablesogo` and LDAP attribute/value
              `enabledService=sogo`.